--- a/src/style.scss
+++ b/src/style.scss
@@ -6,9 +6,14 @@ html {
 }
 
 .logo {
-    background-image: url('img/myImage.jpeg');
+    // background-image: url('img/myImage.jpeg');
     width: 100px;
     height: 100px;
     background-repeat: no-repeat;
     background-size: contain;
 }
+
+.active {
+    color: pink;
+}
+  
