--- a/src/style.scss
+++ b/src/style.scss
@@ -1,19 +1,775 @@
-body,
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,700,300);
+@import url(http://fonts.googleapis.com/css?family=Raleway:700,800,900,400,300);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800);
+
+body {
+    font-family: 'Roboto', sans-serif;    
+    font-size: 15px;
+    line-height: 1.6;
+    background: #fbfbfb;
+    color: #5c5c5c;
+    position: relative;
+    overflow-x: hidden;
+}
+
 html {
-    font-family: "Roboto", sans-serif;
-    background: linear-gradient(to bottom, #87e0fd 0%, #53cbf1 40%, #05abe0 100%);
+    height: 100%;
+    min-height: 100%;
+}
+body {
+    min-height: 100%;
+}
+.content-area {
+    position: relative;
+    z-index: 0;
+}
+.widget *:last-child {
+    margin-bottom: 0;
+}
+.content .widget + .widget,
+.sidebar .widget + .widget,
+.footer .widget + .widget {
+    margin-top: 30px;
+}
+.container.full-width {
+    width: 100%;
+    max-width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+}
+.no-padding{
+    padding-left: 0; padding-right: 0;
+}
+.page-section {
+    position: relative;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    overflow: hidden;
+}
+.mission-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.section-title {
+    margin-top: 0;
+    margin-bottom: 25px;
+    font-size: 30px;
+    font-weight: 900;
+    line-height: 30px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #14181c;
+    overflow: hidden;
+}
+.mission .mission-avatar {
+    margin-top: 70px;
+    border-radius: 10%;
+    width: auto;
+    padding-bottom: 20px;
+}
+.nav-container{
+    flex-direction: row;
+    display: flex;
+    justify-content: space-around;
+}
+.background-video-container {
+    position: relative;
+    height: 70vh;
+}
+.background-video {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+.missions {
+    position: relative;
+}
+
+.mission-background {
+    position: absolute;
+    opacity: 0.2;
+    width: 100%;
     height: 100%;
 }
-
+.second-section {
+    margin-top: 140px;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    margin-bottom: 50px;
+}
+.carousel-package {
+    display: grid;
+    grid-template-rows: 500px 50px;
+    grid-template-columns: 1fr 30px 30px 30px 30px 30px 1fr;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+/* referenced https://codepen.io/onion2k/pen/xxZYBVj
+for carousel css effect */
+.carousel-list{
+    grid-row: 1/2;
+    grid-column: 1/8;
+    height: 500px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transform-style: preserve-3d;
+    perspective: 600px;
+    width: 95%;
+    --items: 5;
+    --middle: 3;
+    --position:1;
+}
+.carousel-list-item {
+    position: absolute;
+    height: 500px;
+    width: 380px;
+    border-radius: 5px;
+    background-color: #cacbcf;
+    --r: calc(var(--position) - var(--offset));
+    --abs: max(calc(var(--r) * -1), var(--r));
+    transition: all 0.25s linear;
+    transform: rotateY(calc(-10deg * var(--r)))
+    translateX(calc(-300px * var(--r)));
+    z-index: calc((var(--position) - var(--abs)));
+}
+.popular-list-item {
+    height: 500px;
+    object-fit: cover;
+}
+.round-button {
+    border-radius: 50%;
+    height: 64px;
+    width: 64px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.right-round-button{
+    z-index: 3;
+}
+.subcategory {
+    padding-top: 10px;
+    padding-left: 5px;
+    width: 100%;
+    height: 100%;
+}
+a {
+    text-decoration: none;
+}
+.subcategory-title{
+    padding: 20px;
+    margin: 0;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    text-shadow: -1px 1px 0 #000,
+    1px 1px 0 #000,
+   1px -1px 0 #000,
+  -1px -1px 0 #000;
+}
+.item-1{
+    --offset: 1;
+    background-image: url("./assets/images/crime.jpeg");
+    background-size: 380px 500px;
+}
+.item-2{
+    --offset: 2;
+    background-image: url("./assets/images/school.jpeg");
+    background-size: 380px 500px;
+}
+.item-3{
+    --offset: 3;
+    background-image: url("./assets/images/carousel-house.jpeg");
+    background-size: 380px 500px;
+}
+.item-4{
+    --offset: 4;
+    background-image: url("./assets/images/money.jpeg");
+    background-size: 380px 500px;
+}
+.item-5{
+    --offset: 5;
+    background-image: url("./assets/images/family.jpeg");
+    background-size: 380px 500px;
+}
+img[alt="left arrow"]{
+    width: 16px;
+    height: 16px;
+}
+img[alt="right arrow"]{
+    width: 16px;
+    height: 16px;
+}
+input:nth-of-type(1) {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+input:nth-of-type(1):checked ~ div.carousel-list {
+    --position: 1;
+}
+input:nth-of-type(2) {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
+input:nth-of-type(2):checked ~ div.carousel-list {
+    --position: 2;
+}
+input:nth-of-type(3) {
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+}
+input:nth-of-type(3):checked ~ div.carousel-list {
+    --position: 3;
+}
+input:nth-of-type(4) {
+    grid-column: 5 / 6;
+    grid-row: 2 / 3;
+}
+input:nth-of-type(4):checked ~ div.carousel-list {
+    --position: 4;
+}
+input:nth-of-type(5) {
+    grid-column: 6 / 7;
+    grid-row: 2 / 3;
+}
+input:nth-of-type(5):checked ~ div.carousel-list {
+    --position: 5;
+}
+.map-container{
+    border-radius: 10%;
+    overflow: hidden;
+    width: 100%;
+    height: 80vh;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.fa {
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    height: 46px;
+    width: 46px;
+    line-height: 45px;
+    vertical-align: middle;
+    text-align: center!important;
+    background-color: #f5f6f8;
+    border: solid 1px #a5abb7;
+    color: #a5abb7;
+    z-index: 20;
+}
+.block-title.alt .fa.color {
+    background-color: #3c64ff;
+}
+.fa {
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
+    vertical-align: middle;
+    text-align: center!important;
+    background-color: #e9e9e9;
+    color: #a5abb7;
+    z-index: 20;
+}
+.fa.color {
+    background-color: #3c64ff;
+}
+.header {
+    -webkit-box-shadow: 0 4px 14px 0 rgba(50, 50, 50, 0.3);
+    box-shadow: 0 4px 14px 0 rgba(50, 50, 50, 0.3);
+}
+.header .header-wrapper {
+    padding: 0;
+    background-color: #fbfbfb;
+    position: relative;
+}
+.header .header-wrapper > .nav-container {
+    position: relative;
+    min-height: 40px;
+}
+.content-area.scroll {
+    background-color: #fbfbfb;
+    width: 630px;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    transition: all .5s ease-in-out;
+}
 .logo {
-    // background-image: url('img/myImage.jpeg');
-    width: 100px;
+    background-color: #eba666;
     height: 100px;
-    background-repeat: no-repeat;
-    background-size: contain;
+    line-height: 100px; 
+    margin-bottom: -20px;   
+}
+.logo a {
+    margin: auto auto;
+    display: block;
+    text-align: center;
+}
+.logo > img {
+    max-height: 100%;
+    height: auto;
+}
+.is-sticky .logo {
+    width: 140px;
+    height: 50px;
+    line-height: 50px;
+}
+.is-sticky .logo img {
+    max-width: none;
+    height: 40px;
+}
+.full-screen-map .logo {
+    width: 140px;
+    height: 50px;
+    line-height: 50px;
+}
+.full-screen-map .logo img {
+    max-width: none;
+    height: 40px;
+}
+@media (max-width: 991px) {
+    .logo {
+        width: 140px;
+        height: 50px;
+        line-height: 50px;
+    }
+    .logo img {
+        max-width: none;
+        height: 40px;
+    }
+}
+@media (max-width: 480px) {
+    .logo {
+        padding-top: 0;
+        margin-bottom: 30px;
+    }
+}
+.logo,
+.logo a,
+.logo img,
+.is-sticky .logo,
+.is-sticky .logo a,
+.is-sticky .logo img {
+    -webkit-transition: none;
+    transition: none;
+}
+.navigation {
+    position: relative;
+    text-align: right;
+    line-height: 0;
+}
+.navigation .nav.sf-menu {
+    font-family: 'Raleway', sans-serif;
+    line-height: 1.72;
+    text-align: left;
+    margin: 0 auto !important;
+}
+.right-menu .navigation{
+    float: right;
+}
+.navigation ul {
+    list-style: none;
+}
+.navigation ul.social-icons {
+    min-width: 0;
+    padding-top: 28px;
+    padding-bottom: 28px;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    display: block !important;
+    position: relative !important;
+    opacity: 1 !important;
+    top: auto !important;
+    left: auto !important;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
+}
+.is-sticky .navigation ul.social-icons {
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+.navigation ul.social-icons li {
+    padding-top: 0 !important;
+    padding-right: 0 !important;
+    background-color: transparent !important;
+}
+.navigation ul.social-icons li a {
+    padding: 0;
+    border: none;
+    font-size: 16px;
+    width: 22px;
+    height: 22px;
+    line-height: 22px;
+    color: #a5abb7;
+}
+.navigation ul.social-icons li a:hover {
+    background-color: transparent;
+    color: #3c64ff;
+}
+.sf-menu {
+    margin: 0;
+    padding: 0;
+}
+.sf-menu li {
+    position: relative;
+}
+.sf-menu ul {
+    position: absolute;
+    display: none;
+    top: 100%;
+    left: 0;
+    z-index: 99;
+}
+.sf-menu > li {
+    float: left;
+}
+.sf-menu li:hover > ul,
+.sf-menu li.sfHover > ul {
+    display: block;
+}
+.sf-menu a {
+    display: block;
+    position: relative;
+}
+.sf-menu ul ul {
+    top: 0;
+    left: 100%;
+}
+.sf-menu ul {
+    min-width: 12em;
+}
+.sf-menu {
+    font-size: 15px;
+    font-weight: 600;
+}
+.sf-menu.nav > li > a:hover,
+.sf-menu.nav > li > a:focus {
+    background-color: transparent;
+}
+.sf-menu.nav > li > a:hover:before,
+.sf-menu.nav > li > a:focus:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 5px;
+    width: 100%;
+    background-color: #3c64ff;
+}
+.sf-menu.nav > li > a,
+.sf-menu ul li > a {
+    padding: 28px 15px 28px 15px;
+}
+.sf-menu ul li > a {
+    padding: 8px 15px 8px 15px;
+}
+.sf-menu.nav > li > a {
+    text-transform: uppercase;
+}
+.is-sticky .sf-menu.nav > li > a {
+    padding-top: 8px !important;
+    padding-bottom: 8px !important;
+}
+.sf-menu .megamenu ul li > a {
+    padding: 3px 15px 3px 15px;
+}
+.sf-menu a {
+    color: #14181c;
+}
+.sf-menu a:hover {
+    color: #a5abb7;
+}
+.sf-menu li:hover,
+.sf-menu li.sfHover,
+.sf-menu li.sfHover > a,
+.sf-menu li.active {
+}
+.sf-menu li.active > a {
+    color: #14181c;
+}
+.sf-menu ul {
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
+}
+.sf-menu ul {
+    margin-left: 0;
+    padding-left: 0;
+}
+.sf-menu ul ul {
+    margin-left: 0;
+}
+.sf-menu ul li {
+    background: #ffffff;
+}
+.sf-menu ul a {
+    text-transform: none;
+    font-weight: 400;
+    text-decoration: none;
+    color: #14181c;
+}
+.sf-menu ul a:hover {
+    color: #14181c;
+    background-color: #e9e9e9;
+}
+.sf-menu.nav > li > a.sf-with-ul,
+.sf-arrows .sf-with-ul {
+    padding-right: 1.8em;
+}
+.sf-arrows .sf-with-ul:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: 5px;
+    margin-top: -1px;
+    height: 0;
+    width: 0;
+    border: 3px solid transparent;
+    border-top-color: #a5abb7;
+}
+.sf-arrows > li > .sf-with-ul:focus:after,
+.sf-arrows > li:hover > .sf-with-ul:after,
+.sf-arrows > .sfHover > .sf-with-ul:after {
+    border-top-color: #3c64ff;
+}
+.sf-arrows ul .sf-with-ul:after {
+    margin-top: -5px;
+    margin-right: -3px;
+    border-color: transparent;
+    border-left-color: #a5abb7;
+}
+.sf-arrows ul li > .sf-with-ul:focus:after,
+.sf-arrows ul li:hover > .sf-with-ul:after,
+.sf-arrows ul .sfHover > .sf-with-ul:after {
+    border-left-color: #3c64ff;
+}
+.sf-menu li ul ul {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+.sf-menu li.megamenu > ul > li.row {
+    padding-top: 50px !important;
+}
+.is-sticky .sf-menu li.megamenu > ul li.row {
+    padding-top: 15px !important;
+}
+.sf-menu li.megamenu {
+    position: inherit !important;
+}
+.sf-menu li.megamenu > ul {
+    font-weight: normal;
+    font-size: 13px;
+    text-transform: none;
+    width: 100%;
+    margin: 0;
+    padding: 0 15px;
+}
+.sf-menu li.megamenu > ul li.row {
+    color: #7f7f7f !important;
+    padding: 15px 0;
+    margin-left: -15px;
+    margin-right: -15px;
+    margin-top: 0;
+}
+.sf-menu li.megamenu > ul li.row div[class*="col-"] {
+    margin-top: 0;
+}
+.sf-menu li.megamenu > ul li ul {
+    display: block;
+    margin-bottom: 15px;
+    position: relative;
+    left: 0;
+    margin-left: 0;
+}
+.sf-menu li.megamenu > ul li a {
+    background-color: transparent;
+}
+.sf-menu li.megamenu ul {
+    margin-left: 0;
+}
+.sf-menu li.megamenu ul a {
+    padding-left: 0;
+}
+.sf-menu li.megamenu ul a:hover {
+    color: #3c64ff;
+}
+.sf-menu li.megamenu p {
+    margin-bottom: 10px;
+}
+.sf-menu li.megamenu .block-title {
+    font-size: 14px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    padding-bottom: 8px;
+    color: #14181c;
+}
+.footer {
+    color: #14181c;
+    background-color: #f9fafb;
+}
+.footer-widgets {
+    padding: 0 0 50px 0;
+    margin-top: 0;
+    background-color: transparent;
+}
+.footer-widgets .widget {
+    margin-top: 50px;
+}
+.footer-widgets .widget-title {
+    margin-top: 0;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #14181c;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    position: relative;
+}
+.footer-widgets .widget-title:before {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 50px;
+    height: 2px;
+    background-color: #a3a4a5;
+}
+.footer-meta {
+    padding: 30px 0;
+    background-color: #ffffff;
+}
+.footer-meta .copyright {
+    text-align: center;
+    color: #a1b1bc;
+}
+.mission {
+    margin-top: 10px;
+    padding-left: 100px;
+    padding-right: 100px;
+    position: relative;
+}
+@media (max-width: 767px) {
+     .mission {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+@media (max-width: 767px) {
+     .mission:before,
+     .mission:after {
+        display: none;
+    }
+}
+ .mission .mission-text {
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 36px;
+    max-width: 900px;
+    margin: 0 auto 0 auto;
+    padding: 60px 0 30px 0;
+    position: relative;
 }
 
-.active {
-    color: pink;
+.mission .mission-position {
+    font-size: 14px;
+    font-weight: 300;
 }
-  
+
+ .mission .media-left {
+    padding-right: 30px;
+}
+ .mission .media-right {
+    padding-left: 30px;
+}
+.image  .mission .mission-text {
+    color: #ffffff;
+}
+.image  .mission .mission-name {
+    color: #ffffff;
+}
+.sidebar  .mission {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.sidebar  .mission .mission-text {
+    font-size: 14px;
+    line-height: 24px;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+.sidebar  .mission .mission-name {
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 400;
+}
+.sidebar  .mission .mission-name .mission-position {
+    display: block;
+}
+.sidebar   {
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+.sidebar   .owl-dots .owl-dot span {
+    border-color: #3c3c3c;
+}
+.sidebar   .owl-dots .owl-dot.active span {
+    background-color: #3c3c3c;
+}
+.alt  {
+    text-align: center;
+}
+.alt  .mission {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.alt  .media-right,
+.alt  .media-left {
+    display: inline-block;
+    margin-top: -40px;
+    padding: 0;
+}
+.alt  .media-right img,
+.alt  .media-left img {
+    margin: 0;
+    max-width: 80px;
+    max-height: 80px;
+    border: solid 5px #ffffff;
+}
+.alt  .mission-text {
+    font-size: 16px;
+    line-height: 24px;
+    padding: 25px 40px 50px 40px;
+    background-color: #ffffff;
+    border-radius: 8px;
+}
+.alt .mission-text:before,
+.alt .mission-text:after {
+    color: #a5abb7;
+    font-size: 18px;
+}
+.alt  .mission-text:before {
+    top: 20px;
+    left: 20px;
+}
+.alt  .mission-text:after {
+    bottom: 20px;
+    right: 20px;
+}
+.alt  .mission-name span {
+    display: block;
+}
