--- a/src/style.scss
+++ b/src/style.scss
@@ -12,6 +12,36 @@ body {
     overflow-x: hidden;
 }
 
+.loader-wrapper {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #1387f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader {
+    border: 16px solid #bbdf29;
+    border-top: 16px solid #07601f;
+    border-radius: 50%;
+    width: 20vw;
+    height: 20vw;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
 html {
     height: 100%;
     min-height: 100%;
@@ -77,6 +107,7 @@ body {
     position: relative;
     height: 70vh;
 }
+
 .background-video {
     position: absolute;
     left: 0px;
@@ -86,6 +117,46 @@ body {
     object-fit: cover;
     z-index: -1;
 }
+.video-mask {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.23);
+}
+.video-content-container{
+    position: absolute;
+    left: 0px;
+    top:0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.video-masked-title{
+    color: #fff;
+    text-decoration: none;
+    text-shadow: -1px 1px 0 rgb(119, 118, 118),
+    1px 1px 0 rgb(119, 118, 118),
+   1px -1px 0 rgb(119, 118, 118),
+  -1px -1px 0 rgb(119, 118, 118);
+}
+.video-masked-button{
+    border-radius: 8%;
+    width: 15vw;
+    height: 4vw;
+    background-color: rgba(13, 144, 41, 0.961);
+    color: #fff;
+    font-size: 1.4vw;
+    margin-top: 2vw;
+}
+
+.video-masked-button:hover{
+    transform: translateX(3px) translateY(-2px);
+    background-color: rgba(54, 148, 76, 0.961);
+}
+
 .missions {
     position: relative;
 }
@@ -773,3 +844,4 @@ input:nth-of-type(5):checked ~ div.carousel-list {
 .alt  .mission-name span {
     display: block;
 }
+
